# MultiLudo

./: .gitignore  CMakeLists.txt  MultiLudo_Report.docx  README.md  Report.md  build.sh
include/: Game.h  Player.h  Token.h  Utils.h
src/: Game.cpp  Player.cpp  Token.cpp  Utils.cpp  main.cpp
